fix: Widget dataTable overflow

--- a/stylesheets/components/_widget.less
+++ b/stylesheets/components/_widget.less
@@ -54,7 +54,18 @@
 
     .dataTable {
       border-radius: @theme-widget-border-radius;
-      overflow: hidden;
+
+      thead tr:first-child {
+
+        th:first-child {
+          border-top-left-radius: 7px;
+        }
+
+        th:last-child {
+          border-top-right-radius: 7px;
+        }
+
+      }
     }
 
     .jqplot-graph {
